[gd_scene load_steps=2 format=2]

[ext_resource path="res://Script/GuiScript/TransportTriggerScript.gd" type="Script" id=1]

[node name="TransportTrigger" type="Node2D"]
script = ExtResource( 1 )

[node name="AreaTransport1" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaTransport1"]

[node name="AreaTransport2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaTransport2"]

[connection signal="body_entered" from="AreaTransport1" to="." method="_on_AreaTransport1_body_entered"]
[connection signal="body_exited" from="AreaTransport1" to="." method="_on_AreaTransport1_body_exited"]
[connection signal="body_entered" from="AreaTransport2" to="." method="_on_AreaTransport2_body_entered"]
[connection signal="body_exited" from="AreaTransport2" to="." method="_on_AreaTransport2_body_exited"]
